# kiso-testing

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Jenkinsfile  LICENSE  NOTICE.md  Pipfile  README.md  changelog-template.hbs  gen_changelog.bat  gen_changelog.sh  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/: dependabot.yml
.github/workflows/: changelog.yml  cliff.toml  codecov.yml  verification_validation.yml
ci/: Dockerfile
docs/: acroname_control.rst  api.rst  auxiliaries.rst  conf.py  config_file.rst  connectors.rst  getting_started.rst  getting_started_dev.rst  how_to_auxiliary.rst  how_to_connector.rst  index.rst  instrument_control.rst  integration_test.rst  multiprocessing.rst  record.rst  requirements.txt  robot_framework.rst  step_report.rst
docs/advanced_features/: access_config.rst  aux_copies.rst  dynamic_conf.rst  index.rst  multiprocessing.rst
docs/advanced_usage/: access_config.rst  advanced_config_file.rst  advanced_tests.rst  api_lifecycle.rst  dynamic_conf.rst  how_to_auxiliary.rst  how_to_change_logger_class.rst  how_to_connector.rst  index.rst  remote_test.rst  reporting.rst  step_report.rst
docs/auxiliaries/: acroname_auxiliary.rst  can_auxiliary.rst  communication_auxiliary.rst  dut_auxiliary.rst  example_test_auxiliary.rst  index.rst  instrument_control_auxiliary.rst  mp_proxy_auxiliary.rst  proxy_auxiliary.rst  record_auxiliary.rst  simulated_auxiliary.rst  uds_auxiliary.rst  ykush_auxiliary.rst  zephyr_auxiliary.rst
docs/auxiliary_interfaces/: auxiliary.rst  dt_aux.rst  index.rst  mp_auxiliary.rst  simple_auxiliary.rst  thread_auxiliary.rst
docs/examples/: acroname_control.rst  how_to_auxiliary.rst  how_to_connector.rst  index.rst  instrument_control.rst  pykiso_to_pytest.rst  record.rst  uds_auxiliary.rst  uds_server_auxiliary.rst
docs/getting_started/: basic_config_file.rst  basic_tests.rst  config_file.rst  contribution_guide.rst  getting_started.rst  getting_started_dev.rst  index.rst  pykiso_as_simulator.rst  user_guide.rst
docs/images/: pykiso_itf.drawio
docs/introduction/: integration_test.rst
docs/modules_usage/: index.rst  instrument_control.rst  uds_auxiliary.rst  uds_server_auxiliary.rst  ykush_control.rst  zephyr_auxiliary.rst
docs/pytest/: api.rst  index.rst  usage.rst
docs/remote_test/: remote_test.rst
docs/robot_framework/: index.rst  rf_library_documentation.rst  rf_ready_auxiliaries.rst  robot_framework.rst
docs/test_app/: test_app.rst
docs/tools/: index.rst  pykiso_to_pytest.rst  show_tag.rst  testrail.rst  xray.rst
docs/whats_new/: index.rst  version_0_16_0.rst  version_0_17_0.rst  version_0_17_1.rst  version_0_18_0.rst  version_0_19_0.rst  version_0_19_1.rst  version_0_19_2.rst  version_0_19_3.rst  version_0_20_0.rst  version_0_21_0.rst  version_0_21_1.rst  version_0_21_2.rst  version_0_22_0.rst  version_0_22_1.rst  version_0_22_2.rst  version_0_23_0.rst  version_0_24_0.rst  version_0_25_1.rst  version_0_26_0.rst  version_0_27_0.rst  version_0_28_0.rst  version_0_29_0.rst  version_ongoing.rst
examples/: acroname.yaml  can.yaml  conf_access.yaml  conftest.py  dummy.yaml  dummy_env_var.yaml  fdx_lauterbach.yaml  grpc.yaml  j_link_rtt_segger.yaml  pcan.yaml  power_supply_control_EA_PSI9000.yaml  power_supply_control_RS_remote.yaml  process.yaml  process_binary.yaml  record_example.yaml  record_rtt_segger.yaml  robot_acroname_aux.yaml  robot_com_aux.yaml  robot_dut_aux.yaml  robot_inst_aux.yaml  robot_record.yaml  robot_uds.yaml  serial.yaml  stepreport.yaml  test_odx_client.yaml  test_odx_server.yaml  test_xray_pytest.py  test_xray_pytest_jira.py  uart.yaml  uds.yaml  uds_server.yaml  virtual.yaml  ykush.yaml  zephyr.yaml
examples/conf_access/: test_access.py
examples/ext_lib/: cc_example.py  example_test_auxiliary.py
examples/nested_yaml/: lauterbach_nested.yaml
examples/templates/: com_aux.yaml  config_auxiliaries.yaml  config_connectors.yaml  config_features.yaml  config_structure.yaml  dut_aux.yaml  instrument_aux.yaml  mp_proxy_aux.yaml  proxy_aux.yaml  proxy_aux_async.yaml
examples/test_can/: simple.dbc  test_can.py
examples/test_odx/: odx_min_example.odx  test_client_odx.py  test_server_odx.py
examples/test_process/: test_process.py  test_process_binary.py
examples/test_record/: test_record.py  test_record_rtt_segger.py  test_recorder_example.py
examples/test_serial/: test_serial.py
examples/test_stepreport/: stepreport_example.py
examples/test_suite_1/: test_suite_1.py  test_suite_11.py
examples/test_suite_2/: test_suite_2.py
examples/test_suite_acroname/: test_acroname.py
examples/test_suite_fdx_lauterbach/: BDU3xxx-Sample_TAPP_Demo.elf  BDUUnlock.cmm  BDUUnlockFlash.cmm  BES3_FlashApplication_TAPP_Demo.cmm  config_mc.t32  fdx_TAPP_Demo.cmm  reset.cmm  test_suite_1.py
examples/test_suite_grpc/: grpc_helloworld_server.py  helloworld_pb2.py  helloworld_pb2.pyi  test_suite_grpc_client.py
examples/test_suite_pcan/: test_suite_1.py
examples/test_suite_rtt/: BRC3-OpenFlashloader.elf  JLinkDevices.xml  test_suite_rtt_jlink.py
testfolder1/: f.xml
tests/: conftest.py  dummy_serial.yaml  test_acroname_usb_auxiliary.py  test_assert_step_report.py  test_auxiliary.py  test_can_aux.py  test_cc_fdx_lauterbach.py  test_cc_grpc_client.py  test_cc_mp_proxy.py  test_cc_pcan_can.py  test_cc_process.py  test_cc_proxy.py  test_cc_rtt_segger.py  test_cc_serial.py  test_cc_socket_can.py  test_cc_tcp_ip.py  test_cc_uart.py  test_cc_udp.py  test_cc_udp_server.py  test_cc_vector_can.py  test_cc_virtual_can.py  test_cc_visa.py  test_cli.py  test_com_aux.py  test_config_parser.py  test_config_registry_and_test_execution.py  test_connector_interface.py  test_dt_auxiliary_interface.py  test_dut_auxiliary.py  test_dynamic_loader.py  test_example_test_auxiliary.py  test_flash_jlink.py  test_flash_lauterbach.py  test_global_config.py  test_instrument_control_auxiliary.py  test_instrument_control_cli.py  test_instrument_control_lib_scpi.py  test_logging.py  test_logging_initializer.py  test_message.py  (+41 more)
(+231 files in other folders)
